# hw_19.2

./: data.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_publication_sign_alter_blog_slug.py  0003_alter_blog_options.py  0004_alter_blog_options.py
blog/templatetags/: my_filters.py
catalog/: admin.py  froms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_contact_alter_category_options_alter_product_options.py  0003_product_is_active.py  0004_alter_product_last_change_date.py  0005_alter_product_category.py  0006_version.py  0007_rename_is_active_version_is_current.py  0008_alter_version_is_current.py  0009_alter_product_is_active.py  0009_alter_version_is_current.py  0010_alter_product_is_active_alter_version_is_current.py  0010_alter_version_is_current.py  0011_alter_version_is_current.py  0011_product_user_owned.py  0012_alter_version_is_current.py  0012_rename_user_owned_product_lashed.py  0013_alter_product_options.py  0013_merge_20230828_1027.py  0014_alter_product_is_active.py  0015_alter_product_options.py  0016_alter_product_is_active.py  0017_merge_20230830_1006.py  0018_alter_product_options_remove_product_lashed_and_more.py  0019_product_lashed.py
catalog/templatetags/: filters.py
config/: settings.py  urls.py
materials/: urls.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_email_confirm_key_user_email_is_confirmed.py  (+1 more)
utils/: utils.py
(+29 files in other folders)
